--- a/doc/sprava.tex
+++ b/doc/sprava.tex
@@ -115,10 +115,10 @@ správ spoločností GIGA-BYTE Technology Co. Ltd. a ASUSTeK Computer Inc.
 Všetky zdroje sú uverejnené na konci tohto dokumentu.
 
 \subsection{Overenie validity modelu}
-Validita modelu bola overovaná porovnávaním dát z dostupných zdrojov s výstupmi
-simulácie. Pri vytváraní modelu boli čiastočne použité dôverihodné informácie,
-pre nedôverihodné alebo nedostupné informácie boli zvolené hypotetické hodnoty,
-ktoré približne odpovedajú reálnemu systému. 
+Validita modelu(\cite{peringer-slidy} str.37) bola overovaná porovnávaním dát z
+dostupných zdrojov s výstupmi simulácie(\cite{peringer-slidy} str.33). Pri vytváraní
+modelu boli čiastočne  použité dôverihodné informácie, pre nedôverihodné alebo
+nedostupné informácie boli zvolené hypotetické hodnoty, ktoré približne odpovedajú reálnemu systému. 
 
 % sekcia 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -160,12 +160,12 @@ Výrobný podnik môže obsahovať niekoľko SMT, DIP, testovích a baliacích l
 Simulačný model je konzolová aplikácia, naprogramovaná v programovacom jazyku
 C++, podľa požiadaviek zadania. Simulačná knižnica SIMLIB/C++\cite{SIMLIB} bola použitá pretože
 umožnuje objektovo zapísať model, čím je implementácia jednoduchšia a efektívnejšia.
-Z tejto knižnice boli použité aj simulačné nástroje na zber štatistík. Na tvorbu
-grafov bol použitý nástroj GNUPLOT\cite{gnuplot}.
+Z tejto knižnice boli použité aj simulačné nástroje(\cite{peringer-slidy} str.38) na zber
+štatistík. Na tvorbu grafov bol použitý nástroj GNUPLOT\cite{gnuplot}.
 
 \subsection{Popis pôvodu použitých metód}
-Bola použitá knižnica SIMLIB/C++, v ktorej sme rozšírili model zariádení a 
-skladov o identifikáciu v ktorej výrobnej linke sa nachádza.
+Bola použitá knižnica SIMLIB/C++, v ktorej sme rozšírili model zariadení(\cite{peringer-slidy} str.180) a 
+skladov(\cite{peringer-slidy} str.184) o identifikáciu v ktorej výrobnej linke sa nachádza.
 
 % sekcia 3
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
